[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-trading"
version = "0.1.0"
description = "AI Multi-Agent Trading System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-asyncio>=1.0.0,<2.0",
]
test = [
    "pytest>=8.0,<10",
    "pytest-asyncio>=1.0.0,<2.0",
]

[project.scripts]
agent-trading = "agent_trading.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_trading*"]
